# Triton-Workshop

./: README.md  pyproject.toml
exercises/: exercise1.py  exercise2.py  exercise3.py  exercise4.py
slides/: triton-workshop.md
solutions/: exercise1.py  exercise2.py  exercise3.py  exercise4.py
src/triton_workshop/: runners.py  utils_debug.py  utils_main.py
